@@ -19,8 +19,14 @@ resources(
 configure_requires();
 
 build_requires(
-    'Exporter'   => 0,
-    'Test::Most' => 0,
+    'Exporter'        => 0,
+    'File::Compare'   => 0,
+    'File::Temp'      => 0,
+    'Test::Deep'      => 0,
+    'Test::Exception' => 0,
+    'Test::Kit'       => '2.10',
+    'Test::More'      => 0,
+    'lib'             => 0,
 );
 
 requires(
@@ -50,11 +56,14 @@ recommends(
 );
 
 test_requires(
-    'Exporter'      => 0,
-    'File::Compare' => 0,
-    'File::Temp'    => 0,
-    'Test::Most'    => 0,
-    'Test::More'    => 0,
+    'Exporter'        => 0,
+    'File::Compare'   => 0,
+    'File::Temp'      => 0,
+    'Test::Deep'      => 0,
+    'Test::Exception' => 0,
+    'Test::Kit'       => '2.10',
+    'Test::More'      => 0,
+    'lib'             => 0,
 );
 
 install_script(qw{ bin/pod2readme });
